syntax = "proto3";
package icaauth.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "icaauth/v1/params.proto";

option go_package = "github.com/crypto-org-chain/cronos/v2/x/icaauth/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cronos/icaauth/v1/params";
  }

  // InterchainAccountAddress queries the interchain account address for given
  // `connection_id` and `owner`
  rpc InterchainAccountAddress(QueryInterchainAccountAddressRequest) returns (QueryInterchainAccountAddressResponse) {
    option (google.api.http).get = "/cronos/icaauth/v1/interchain_account_address/{connection_id}/{owner}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

// QueryInterchainAccountAddressRequest defines the request for the
// InterchainAccountAddress query.
message QueryInterchainAccountAddressRequest {
  string connection_id = 1 [(gogoproto.moretags) = "yaml:\"connection_id\""];
  string owner         = 2;
}

// QueryInterchainAccountAddressResponse defines the response for the
// InterchainAccountAddress query.
message QueryInterchainAccountAddressResponse {
  string interchain_account_address = 1;
}
